tests/paczka1/fuzzy1/74147776.err
Error in line 6: h1DzhCJCu A570 54,2
Error in line 8: oOA1v22 A570 83,0
Error in line 13: S20 S20 69,4
Error in line 18: h1DzhCJCu S)59 120,1
Error in line 26: yXOPFhgt6 S20 36,6
Error in line 27: yXOPFhgt6 S72 67,0
Error in line 35: oOA1v22 S72 3,3
